# flora

./: Cargo.toml  README.md  ROADMAP.md  check_output.txt  source.txt
src/: backend.rs  decorations.rs  input.rs  main.rs  state.rs
src/backend/: drm.rs  mod.rs  winit.rs
src/compositor/: mod.rs  render.rs  state.rs  window.rs
src/input/: handler.rs  libinput.rs  mod.rs
src/shell/: decoration.rs  mod.rs  xdg.rs
