[package]
name = "flora"
version = "26.0.1"
edition = "2021"

[features]
default = ["winit"]  # Dev-friendly: enables nested compositor mode
winit = ["smithay/backend_winit"]  # Optional: enables running inside another compositor

[dependencies]
smithay = { version = "0.7.0", default-features = false, features = [
    "backend_drm", 
    "backend_udev", 
    "backend_libinput", 
    "backend_gbm", 
    "backend_winit",
    "desktop", 
    "renderer_glow", 
    "wayland_frontend", 
    "x11rb"
] }
wayland-server = "0.31"
calloop = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
libc = "0.2"
smithay-egui = "0.2"
egui = "0.31"

[dev-dependencies]
wayland-client = "0.31"
tempfile = "3"
rstest = "0.18"
